cmake_minimum_required(VERSION 3.15)
project(expression_template_safety_tests)

enable_testing()

find_package(Eigen3 REQUIRED)

add_library(shared-config INTERFACE)
add_library(ets::base-config ALIAS shared-config)

target_link_libraries(shared-config INTERFACE Eigen3::Eigen)

function(setup_positive_test target_name)
    add_executable(${target_name} src/main.cpp)
    string(TOUPPER ${target_name} pp_name)
    target_compile_definitions(${target_name} PRIVATE ${pp_name})
    target_link_libraries(${target_name} ets::base-config)
    add_test(NAME ${target_name} COMMAND ${CMAKE_COMMAND} --build . --target ${target_name} --config $<CONFIGURATION>)
endfunction()

function(setup_negative_test target_name assert_message)
    setup_positive_test(${target_name})

    set_target_properties(${target_name} PROPERTIES
        EXCLUDE_FROM_ALL TRUE
        EXCLUDE_FROM_DEFAULT_BUILD TRUE
    )

    set_tests_properties(${target_name} PROPERTIES PASS_REGULAR_EXPRESSION ${assert_message})
endfunction()

target_compile_features(shared-config INTERFACE cxx_std_17)

setup_positive_test(test_1_1)
setup_positive_test(test_1_2)
setup_positive_test(test_1_3)
setup_positive_test(test_1_4)
setup_negative_test(test_1_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_1_6)
setup_positive_test(test_1_7)
setup_positive_test(test_1_8)
setup_positive_test(test_2_1)
setup_positive_test(test_2_2)
setup_positive_test(test_2_3)
setup_positive_test(test_2_4)
setup_negative_test(test_2_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_2_6)
setup_positive_test(test_2_7)
setup_positive_test(test_2_8)
setup_positive_test(test_3_1)
setup_positive_test(test_3_2)
setup_positive_test(test_3_3)
setup_positive_test(test_3_4)
setup_negative_test(test_3_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_3_6)
setup_positive_test(test_3_7)
setup_positive_test(test_3_8)
setup_positive_test(test_4_1)
setup_positive_test(test_4_2)
setup_positive_test(test_4_3)
setup_positive_test(test_4_4)
setup_negative_test(test_4_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_4_6)
setup_positive_test(test_4_7)
setup_positive_test(test_4_8)
setup_negative_test(test_5_1 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_2 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_3 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_4 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_5 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_6 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_7 "The LHS references an r-value past its lifetime.")
setup_negative_test(test_5_8 "The LHS references an r-value past its lifetime.")
setup_positive_test(test_6_1)
setup_positive_test(test_6_2)
setup_positive_test(test_6_3)
setup_positive_test(test_6_4)
setup_negative_test(test_6_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_6_6)
setup_positive_test(test_6_7)
setup_positive_test(test_6_8)
setup_positive_test(test_7_1)
setup_positive_test(test_7_2)
setup_positive_test(test_7_3)
setup_positive_test(test_7_4)
setup_negative_test(test_7_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_7_6)
setup_positive_test(test_7_7)
setup_positive_test(test_7_8)
setup_positive_test(test_8_1)
setup_positive_test(test_8_2)
setup_positive_test(test_8_3)
setup_positive_test(test_8_4)
setup_negative_test(test_8_5 "The RHS references an r-value past its lifetime.")
setup_positive_test(test_8_6)
setup_positive_test(test_8_7)
setup_positive_test(test_8_8)